[gd_scene load_steps=11 format=3 uid="uid://chixb0wso8nu8"]

[ext_resource type="Script" uid="uid://fqnicuhsiixx" path="res://scripts/CardManager.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://c4soc5y2d1gor" path="res://scripts/PlayerHand.gd" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://c0abjvsmtgrn1" path="res://scripts/Deck.gd" id="4_7mycd"]
[ext_resource type="Texture2D" uid="uid://bagx7xvwq10t4" path="res://assets/art/cards/CardBack.png" id="4_lquwl"]
[ext_resource type="Script" uid="uid://dk7tvi3rjxdqw" path="res://scripts/InputManager.gd" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://beobyodqvdcrg" path="res://scenes/DeckView.tscn" id="7_272bh"]
[ext_resource type="Script" uid="uid://c3o75f7d402w8" path="res://scripts/PlayerDeck.gd" id="7_playerdeck"]
[ext_resource type="Script" uid="uid://nbt330y7nasy" path="res://scripts/EnemyDeck.gd" id="8_enemydeck"]
[ext_resource type="Script" uid="uid://cxe2a4nswm1hn" path="res://scripts/TurnLogic.gd" id="9_turnlogic"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(148, 209)

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_0xm2m")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_1bvp3")

[node name="PlayerDeck" type="Node2D" parent="."]
script = ExtResource("7_playerdeck")

[node name="EnemyDeck" type="Node2D" parent="."]
script = ExtResource("8_enemydeck")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 890)
script = ExtResource("4_7mycd")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("4_lquwl")

[node name="Area2D" type="Area2D" parent="Deck"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_7mycd")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_272bh")

[node name="TurnLogic" type="Node2D" parent="."]
script = ExtResource("9_turnlogic")

[node name="DeckView" parent="." instance=ExtResource("7_272bh")]
visible = false

[node name="ViewDeckButton" type="Button" parent="."]
custom_minimum_size = Vector2(120, 40)
offset_left = 1455.0
offset_top = 940.0
offset_right = 1575.0
offset_bottom = 980.0
text = "Deck"

[node name="PlayHandButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = 1375.0
offset_top = 880.0
offset_right = 1575.0
offset_bottom = 920.0
text = "Play Hand"
